k8s/budget-django/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
        - name: settings
          secret:
            secretName: web-secrets
      containers:
        - name: web
          image: registry.timo-hermans.nl/budget-django:beta11
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"       # 1 full core
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /app/.env
              subPath: .env
              name: settings
              readOnly: true
      imagePullSecrets:
        - name: regcred
