k8s/budget-django/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budget-django-svc
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 8000
