k8s/budget-django/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: budget-django-route
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`budget3.timo-hermans.nl`)
      services:
        - name: budget-django-svc
          port: 80
  tls:
    certResolver: default
    domains:
      - main: budget3.timo-hermans.nl
